--- a/Monochrome/html/menspage.html
+++ b/Monochrome/html/menspage.html
@@ -16,125 +16,124 @@
 <body>
   <header class="header">
     <div class="img-cover">
-      <div class="header-contact">
-        <ul>
-          <li>
-            <a
-              href="http://www.youtube.com"
-              title="Youtube"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="basic"
-            ><i class="fab fa-youtube"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.twitter.com"
-              title="Twitter"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-twitter"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.facebook.com"
-              title="Facebook"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-facebook-f"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.instagram.com"
-              title="Instagram"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-instagram-square"></i></a>
-          </li>
-        </ul>
-
-        <p>
-          <a
-            href="tel:+44(0)1023456789"
-            title="Call us"
-          >CALL US +44 (0)10 2345 6789</a>
-        </p>
-      </div>
-      <!-- ./ header-contact  -->
-
-      <div class="header-controls">
-        <div class="menu-nav">
-          <div class="cont">
-            <p class="d-md-none">
-              <a
-                href=""
-                title="menu"
-                class="menu-bars"
-              ><i class="fas fa-bars"></i></a>
-            </p>
-
-
-            <form action="header-search">
-              <div class="search-form">
-
-                <input
-                  type="text"
-                  name="search"
-                  id="search"
-                  placeholder="Search"
-                >
-                <button type="submit"><i class="fas fa-search icon"></i></button>
-              </div>
-            </form>
-          </div>
-          <!-- ./ cont  -->
-        </div>
-        <!-- ./ search-form  -->
-
-        <div class="user-control cont">
-          <div class="d-md-none">
-            <a
-              href=""
-              title="homepage"
-              class="logo"
-            >MONOCHROME</a>
-          </div>
-
+      <div class=" user-navigation">
+        <div class="header-contact">
           <ul>
             <li>
               <a
-                href=""
-                title="Account"
-              >
-                <i class="far fa-user"></i>
-              </a>
+                href="http://www.youtube.com"
+                title="Youtube"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-youtube"></i></a>
             </li>
 
             <li>
               <a
-                href=""
-                title="wishlist"
-              >
-                <i class="far fa-heart"></i>
-              </a>
+                href="http://www.twitter.com"
+                title="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-twitter"></i></a>
             </li>
 
             <li>
               <a
-                href="shoppingbag.html"
-                title="cart"
-              >
-                <i class="fas fa-shopping-bag"></i>
-              </a>
+                href="http://www.facebook.com"
+                title="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-facebook-f"></i></a>
+            </li>
+
+            <li>
+              <a
+                href="http://www.instagram.com"
+                title="Instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-instagram-square"></i></a>
             </li>
           </ul>
+
+          <p>
+            <a
+              href="tel:+44(0)1023456789"
+              title="Call us"
+            >CALL US +44 (0)10 2345 6789</a>
+          </p>
         </div>
-        <!-- ./user-control  -->
+        <!-- ./ header-contact  -->
+
+        <div class="header-controls">
+          <div class="menu-nav">
+            <div class="cont">
+              <a
+                href=""
+                title="menu"
+                class="menu-bars d-md-none"
+              ><i class="fas fa-bars"></i></a>
+
+
+              <form action="header-search">
+                <div class="search-form">
+
+                  <input
+                    type="text"
+                    name="search"
+                    id="search"
+                    placeholder="Search"
+                  >
+                  <button type="submit"><i class="fas fa-search icon"></i></button>
+                </div>
+              </form>
+            </div>
+            <!-- ./ menu-nav  -->
+          </div>
+
+
+          <div class="user-control cont">
+            <div class="d-md-none">
+              <a
+                href=""
+                title="homepage"
+                class="logo"
+              >MONOCHROME</a>
+            </div>
+
+            <ul>
+              <li>
+                <a
+                  href="signIn.html"
+                  title="Account"
+                >
+                  <i class="far fa-user"></i>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href=""
+                  title="wishlist"
+                >
+                  <i class="far fa-heart"></i>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="shoppingbag.html"
+                  title="cart"
+                >
+                  <i class="fas fa-shopping-bag"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- ./user-control  -->
+        </div>
+        <!-- ./ header-controls  -->
       </div>
-      <!-- ./ header-controls  -->
     </div>
     <!-- ./ img-cover  -->
 
@@ -157,7 +156,7 @@
 
         <li>
           <a
-            href=""
+            href="menspage.html"
             title="Men`s"
           >Men`s</a>
         </li>
@@ -178,11 +177,12 @@
 
         <li>
           <a
-            href=""
+            href="lookBook.html"
             title="Lookbook"
           >Lookbook</a>
         </li>
       </ul>
+
     </nav>
     <!-- ./ nav  -->
   </header>
