--- a/Monochrome/html/shoppingbag.html
+++ b/Monochrome/html/shoppingbag.html
@@ -16,122 +16,124 @@
 <body>
   <header class="header">
     <div class="img-cover">
-      <div class="header-contact">
-        <ul>
-          <li>
-            <a
-              href="http://www.youtube.com"
-              title="Youtube"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-youtube"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.twitter.com"
-              title="Twitter"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-twitter"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.facebook.com"
-              title="Facebook"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-facebook-f"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.instagram.com"
-              title="Instagram"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-instagram-square"></i></a>
-          </li>
-        </ul>
-
-        <p>
-          <a
-            href="tel:+44(0)1023456789"
-            title="Call us"
-          >CALL US +44 (0)10 2345 6789</a>
-        </p>
-      </div>
-      <!-- ./ header-contact  -->
-
-      <div class="header-controls">
-        <div class="menu-nav">
-          <div class="cont">
-            <a
-              href=""
-              title="menu"
-              class="menu-bars d-md-none"
-            ><i class="fas fa-bars"></i></a>
-
-
-            <form action="header-search">
-              <div class="search-form">
-
-                <input
-                  type="text"
-                  name="search"
-                  id="search"
-                  placeholder="Search"
-                >
-                <button type="submit"><i class="fas fa-search icon"></i></button>
-              </div>
-            </form>
-          </div>
-          <!-- ./ cont  -->
-        </div>
-        <!-- ./ search-form  -->
-
-        <div class="user-control cont">
-          <div class="d-md-none">
-            <a
-              href=""
-              title="homepage"
-              class="logo"
-            >MONOCHROME</a>
-          </div>
-
+      <div class=" user-navigation">
+        <div class="header-contact">
           <ul>
             <li>
               <a
-                href="signIn.html"
-                title="Account"
-              >
-                <i class="far fa-user"></i>
-              </a>
+                href="http://www.youtube.com"
+                title="Youtube"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-youtube"></i></a>
             </li>
 
             <li>
               <a
-                href=""
-                title="wishlist"
-              >
-                <i class="far fa-heart"></i>
-              </a>
+                href="http://www.twitter.com"
+                title="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-twitter"></i></a>
             </li>
 
             <li>
               <a
-                href=""
-                title="cart"
-              >
-                <i class="fas fa-shopping-bag"></i>
-              </a>
+                href="http://www.facebook.com"
+                title="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-facebook-f"></i></a>
+            </li>
+
+            <li>
+              <a
+                href="http://www.instagram.com"
+                title="Instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-instagram-square"></i></a>
             </li>
           </ul>
+
+          <p>
+            <a
+              href="tel:+44(0)1023456789"
+              title="Call us"
+            >CALL US +44 (0)10 2345 6789</a>
+          </p>
         </div>
-        <!-- ./user-control  -->
+        <!-- ./ header-contact  -->
+
+        <div class="header-controls">
+          <div class="menu-nav">
+            <div class="cont">
+              <a
+                href=""
+                title="menu"
+                class="menu-bars d-md-none"
+              ><i class="fas fa-bars"></i></a>
+
+
+              <form action="header-search">
+                <div class="search-form">
+
+                  <input
+                    type="text"
+                    name="search"
+                    id="search"
+                    placeholder="Search"
+                  >
+                  <button type="submit"><i class="fas fa-search icon"></i></button>
+                </div>
+              </form>
+            </div>
+            <!-- ./ menu-nav  -->
+          </div>
+
+
+          <div class="user-control cont">
+            <div class="d-md-none">
+              <a
+                href=""
+                title="homepage"
+                class="logo"
+              >MONOCHROME</a>
+            </div>
+
+            <ul>
+              <li>
+                <a
+                  href="signIn.html"
+                  title="Account"
+                >
+                  <i class="far fa-user"></i>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href=""
+                  title="wishlist"
+                >
+                  <i class="far fa-heart"></i>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="shoppingbag.html"
+                  title="cart"
+                >
+                  <i class="fas fa-shopping-bag"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- ./user-control  -->
+        </div>
+        <!-- ./ header-controls  -->
       </div>
-      <!-- ./ header-controls  -->
     </div>
     <!-- ./ img-cover  -->
 
@@ -147,7 +149,7 @@
 
         <li>
           <a
-            href=""
+            href="index.html"
             title="Brands"
           >Brands</a>
         </li>
@@ -175,7 +177,7 @@
 
         <li>
           <a
-            href=""
+            href="lookBook.html"
             title="Lookbook"
           >Lookbook</a>
         </li>
@@ -190,56 +192,30 @@
     <section class="shopping-bag">
       <h1>Shopping Bag</h1>
 
-      <div class="border"></div>
+      <table class="table-responsive">
+        <tr class="border-bottom">
+          <th scope="col">ITEM</th>
+          <th scope="col">DESCRIPTION</th>
+          <th scope="col">COLOUR</th>
+          <th scope="col">QUANTITY</th>
+          <th scope="col">UNIT PRICE</th>
+        </tr>
 
-      <ul class="list">
-        <li>
-          ITEM
-        </li>
+        <tr>
+          <th> <img
+              src="/img/products/6.png"
+              alt=""
+            ></th>
+          <th>
+            <h3>Monochrome Max</h3>
+            <p>Max Bill Chronoscope 40mm Stainless Steel and Leather Watch</p>
+          </th>
+          <th>Black</th>
+          <th class="quantity"><i class="fas fa-minus"></i> 1 <i class="fas fa-plus"></i></th>
+          <th>$2,750</th>
+        </tr>
+      </table>
 
-        <li>
-          DESCRIPTION
-        </li>
-
-        <li>
-          COLOUR
-        </li>
-
-        <li>
-          QUANTITY
-        </li>
-
-        <li>
-          UNIT PRICE
-        </li>
-      </ul>
-
-      <div class="border"></div>
-
-      <div class="product-info">
-        <div>
-          <img
-            src="/img/products/6.png"
-            alt=""
-          >
-        </div>
-
-        <div>
-          <h3>Monochrome Max</h3>
-          <p>Max Bill Chronoscope <br> 40mm Stainless Steel <br> and Leather Watch</p>
-        </div>
-
-        <div>
-          Black
-        </div>
-
-        <div class="quantity">
-          <i class="fas fa-minus"></i> 1 <i class="fas fa-plus"></i>
-        </div>
-
-        <div> $2,750</div>
-      </div>
-      <!-- // product info  -->
 
       <div class="border"></div>
 
@@ -295,12 +271,12 @@
           <a
             href="tel:+44(0)1023456789"
             title="Call us"
-          >call us: +44 (0)10 2345 6789 |</a>
+          >call us: +44 (0)10 2345 6789 </a> |
         </li>
 
-        <li><a href="">email customer care |</a></li>
+        <li><a href="">email customer care </a>|</li>
 
-        <li><a href="">shipping information |</a></li>
+        <li><a href="">shipping information </a>|</li>
 
         <li><a href="">returns & exchanges</a></li>
       </ul>
