--- a/Monochrome/html/signIn.html
+++ b/Monochrome/html/signIn.html
@@ -16,122 +16,124 @@
 <body>
   <header class="header">
     <div class="img-cover">
-      <div class="header-contact">
-        <ul>
-          <li>
-            <a
-              href="http://www.youtube.com"
-              title="Youtube"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-youtube"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.twitter.com"
-              title="Twitter"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-twitter"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.facebook.com"
-              title="Facebook"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-facebook-f"></i></a>
-          </li>
-
-          <li>
-            <a
-              href="http://www.instagram.com"
-              title="Instagram"
-              target="_blank"
-              rel="noopener noreferrer"
-            ><i class="fab fa-instagram-square"></i></a>
-          </li>
-        </ul>
-
-        <p>
-          <a
-            href="tel:+44(0)1023456789"
-            title="Call us"
-          >CALL US +44 (0)10 2345 6789</a>
-        </p>
-      </div>
-      <!-- ./ header-contact  -->
-
-      <div class="header-controls">
-        <div class="menu-nav">
-          <div class="cont">
-            <a
-              href=""
-              title="menu"
-              class="menu-bars d-md-none"
-            ><i class="fas fa-bars"></i></a>
-
-
-            <form action="header-search">
-              <div class="search-form">
-
-                <input
-                  type="text"
-                  name="search"
-                  id="search"
-                  placeholder="Search"
-                >
-                <button type="submit"><i class="fas fa-search icon"></i></button>
-              </div>
-            </form>
-          </div>
-          <!-- ./ cont  -->
-        </div>
-        <!-- ./ search-form  -->
-
-        <div class="user-control cont">
-          <div class="d-md-none">
-            <a
-              href=""
-              title="homepage"
-              class="logo"
-            >MONOCHROME</a>
-          </div>
-
+      <div class=" user-navigation">
+        <div class="header-contact">
           <ul>
             <li>
               <a
-                href=""
-                title="Account"
-              >
-                <i class="far fa-user"></i>
-              </a>
+                href="http://www.youtube.com"
+                title="Youtube"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-youtube"></i></a>
             </li>
 
             <li>
               <a
-                href=""
-                title="wishlist"
-              >
-                <i class="far fa-heart"></i>
-              </a>
+                href="http://www.twitter.com"
+                title="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-twitter"></i></a>
             </li>
 
             <li>
               <a
-                href="shoppingbag.html"
-                title="cart"
-              >
-                <i class="fas fa-shopping-bag"></i>
-              </a>
+                href="http://www.facebook.com"
+                title="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-facebook-f"></i></a>
+            </li>
+
+            <li>
+              <a
+                href="http://www.instagram.com"
+                title="Instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              ><i class="fab fa-instagram-square"></i></a>
             </li>
           </ul>
+
+          <p>
+            <a
+              href="tel:+44(0)1023456789"
+              title="Call us"
+            >CALL US +44 (0)10 2345 6789</a>
+          </p>
         </div>
-        <!-- ./user-control  -->
+        <!-- ./ header-contact  -->
+
+        <div class="header-controls">
+          <div class="menu-nav">
+            <div class="cont">
+              <a
+                href=""
+                title="menu"
+                class="menu-bars d-md-none"
+              ><i class="fas fa-bars"></i></a>
+
+
+              <form action="header-search">
+                <div class="search-form">
+
+                  <input
+                    type="text"
+                    name="search"
+                    id="search"
+                    placeholder="Search"
+                  >
+                  <button type="submit"><i class="fas fa-search icon"></i></button>
+                </div>
+              </form>
+            </div>
+            <!-- ./ menu-nav  -->
+          </div>
+
+
+          <div class="user-control cont">
+            <div class="d-md-none">
+              <a
+                href=""
+                title="homepage"
+                class="logo"
+              >MONOCHROME</a>
+            </div>
+
+            <ul>
+              <li>
+                <a
+                  href="signIn.html"
+                  title="Account"
+                >
+                  <i class="far fa-user"></i>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href=""
+                  title="wishlist"
+                >
+                  <i class="far fa-heart"></i>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="shoppingbag.html"
+                  title="cart"
+                >
+                  <i class="fas fa-shopping-bag"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- ./user-control  -->
+        </div>
+        <!-- ./ header-controls  -->
       </div>
-      <!-- ./ header-controls  -->
     </div>
     <!-- ./ img-cover  -->
 
@@ -175,7 +177,7 @@
 
         <li>
           <a
-            href=""
+            href="lookBook.html"
             title="Lookbook"
           >Lookbook</a>
         </li>
@@ -223,7 +225,7 @@
         <div class="border small-border"></div>
 
         <p>Make purchases faster using previously saved details.
-          Track <br> previous orders and easily request returns from the website.
+          Track previous orders and easily request returns from the website.
         </p>
 
         <form action="/">
@@ -291,19 +293,22 @@
             placeholder="Confirm password"
           >
 
-          <input
-            type="radio"
-            id="agree"
-            name="agree"
-            value="agree"
-            class="radio-input"
-          >
-          <label
-            for="agree"
-            class="radio-label"
-          >
-            I agree with <a href="">Terms and Conditions</a> and <br> GDPR <a href="">Privacy Policy</a>
-          </label>
+          <div class="radio-group">
+            <input
+              type="radio"
+              id="agree"
+              name="agree"
+              value="agree"
+              class="radio-input"
+            >
+            <label
+              for="agree"
+              class="radio-label"
+            >
+              I agree with <a href="">Terms and Conditions</a> and <br> GDPR <a href="">Privacy Policy</a>
+            </label>
+          </div>
+
 
           <button
             type="submit"
@@ -324,12 +329,12 @@
         <a
           href="tel:+44(0)1023456789"
           title="Call us"
-        >call us: +44 (0)10 2345 6789 |</a>
+        >call us: +44 (0)10 2345 6789</a> |
       </li>
 
-      <li><a href="">email customer care |</a></li>
+      <li><a href="">email customer care</a> | </li>
 
-      <li><a href="">shipping information |</a></li>
+      <li><a href="">shipping information</a> | </li>
 
       <li><a href="">returns & exchanges</a></li>
     </ul>
