--- a/Monochrome/html/lookBook.html
+++ b/Monochrome/html/lookBook.html
@@ -310,14 +310,15 @@
       >
 
       <section class="submit-input">
-        <div class="pretty p-default p-round mb-4">
+        <div class="pretty p-default p-round mt-4">
           <input
             class="checkbox"
             type="checkbox"
             name="terms"
             id="terms"
             checked
-          > <span class="checkbox-custom"></span>
+          >
+
           <div class="state">
             <label
               for="terms"
@@ -329,7 +330,11 @@
               >terms and conditions</a>
             </label>
           </div>
+
         </div>
+
+
+
 
         <div class="pretty p-default p-round mt-4">
           <input
@@ -337,7 +342,7 @@
             type="checkbox"
             name="news"
             id="news"
-          > <span class="checkbox-custom"></span>
+          >
 
           <div class="state">
             <label
